tests/NormalTests/paczka1/small_fuzzy/22198761.err
Error in line 4: lQ1 S131 43,6
Error in line 6: h4fzMuh4q8 S787 12,2
